--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "react": "^16.9.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
+    "react-files": "^2.4.8",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
+    "redux": "^4.0.4",
     "sass": "^1.22.12"
   },
   "scripts": {
