--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sass": "^1.22.12"
   },
   "scripts": {
-    "start": "react-scripts start&npm run sass",
+    "start": "react-scripts start&yarn run sass",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
